--- a/pioneers/debian/changelog
+++ b/pioneers/debian/changelog
@@ -11,6 +11,7 @@ pioneers (15.5-1~local1) UNRELEASED; urgency=medium
   * Changed compat level to 11.
   * Use secure URL for the source code and copyright file.
   * Upgrade standards version to 4.1.3.
+  * Removed package transitions since 15.1-1.
   * Waiting for new upstream release.
 
  -- Roland Clobus <rclobus@rclobus.nl>  Thu, 15 Sep 2016 22:01:01 +0200
