--- a/trunk/pioneers/ChangeLog
+++ b/trunk/pioneers/ChangeLog
@@ -1,4 +1,7 @@
 2018-03-14  Roland Clobus <rclobus@rclobus.nl>
+	* configure.ac: Work version is 15.6.
+
+2018-03-14  Roland Clobus <rclobus@rclobus.nl>
 	* Released 15.5.
 
 2018-03-14  Roland Clobus <rclobus@rclobus.nl>
