--- a/pioneers/debian/changelog
+++ b/pioneers/debian/changelog
@@ -1,5 +1,6 @@
-pioneers (15.5-1~local1) UNRELEASED; urgency=medium
+pioneers (15.5-1) unstable; urgency=medium
 
+  * New upstream release.
   * pioneers-builddep updated.
   * Removed dependency on libgnome (closes: #890465)
   * Removed dependency on scrollkeeper (closes: #885613)
@@ -12,9 +13,8 @@ pioneers (15.5-1~local1) UNRELEASED; urgency=medium
   * Use secure URL for the source code and copyright file.
   * Upgrade standards version to 4.1.3.
   * Removed package transitions since 15.1-1.
-  * Waiting for new upstream release.
 
- -- Roland Clobus <rclobus@rclobus.nl>  Thu, 15 Sep 2016 22:01:01 +0200
+ -- Roland Clobus <rclobus@rclobus.nl>  Wed, 14 Mar 2018 17:44:00 +0100
 
 pioneers (15.4-1) unstable; urgency=medium
 
