--- a/pioneers/debian/changelog
+++ b/pioneers/debian/changelog
@@ -1,3 +1,9 @@
+pioneers (15.6-1~local1) UNRELEASED; urgency=medium
+
+  * Waiting for a new release.
+
+ -- Roland Clobus <roland@silent.lan>  Wed, 14 Mar 2018 18:54:08 +0100
+
 pioneers (15.5-1) unstable; urgency=medium
 
   * New upstream release.
