--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,3 +1,6 @@
+2018-04-20  Roland Clobus <rclobus@rclobus.nl>
+	* editor/gtk/editor.c: Removed GTK warning for context menu.
+	
 2018-03-14  Roland Clobus <rclobus@rclobus.nl>
 	* configure.ac: Work version is 15.6.
 
