--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,3 +1,7 @@
+2018-04-25  Roland Clobus <rclobus@rclobus.nl>
+	* common/gtk/guimap.c, common/gtk/guimap.h, common/gtk/select-game.c:
+	(Re-)enable zoom functionality. Simplify code related to zoom.
+	
 2018-04-20  Roland Clobus <rclobus@rclobus.nl>
 	* editor/gtk/editor.c: Removed GTK warning for context menu.
 	* editor/gtk/editor.c: Fix for showing the context menu when the mouse
