--- a/trunk/pioneers/ChangeLog
+++ b/trunk/pioneers/ChangeLog
@@ -1,3 +1,18 @@
+2018-05-23  Roland Clobus <rclobus@rclobus.nl>
+	* client/gtk/avahi-browser.c, client/gtk/avahi-browser.h,
+	client/gtk/connect.c, client/gtk/gui.c, client/gtk/legend.c,
+	client/gtk/resource-table.c, client/gtk/resource-table.h,
+	client/gtk/resource.c, client/gtk/settingscreen.c, client/gtk/trade.c,
+	common/gtk/game-rules.c, common/gtk/game-rules.h,
+	common/gtk/game-settings.c, common/gtk/game-settings.h,
+	common/gtk/metaserver.c, common/gtk/metaserver.h,
+	common/gtk/select-game.c, common/gtk/select-game.h,
+	editor/gtk/editor.c, editor/gtk/game-buildings.c,
+	editor/gtk/game-buildings.h, editor/gtk/game-devcards.c,
+	editor/gtk/game-devcards.h, editor/gtk/game-resources.c,
+	editor/gtk/game-resources.h, server/gtk/main.c: Migrate from gtk_table
+	to gtk_grid.
+
 2018-05-16  Roland Clobus <rclobus@rclobus.nl>
 	* common/gtk/common_gtk.c: Fixed compiler warning from previous
 	commit.
