--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,3 +1,6 @@
+2018-06-19  Roland Clobus <rclobus@rclobus.nl>
+	* common/gtk/game-rules.c: Fixed a Gdk warning (SF bug 295)
+	
 2018-06-16  Roland Clobus <rclobus@rclobus.nl>
 	* client/gtk/data/themes/Iceland/theme.cfg,
 	client/gtk/data/themes/Tiny/theme.cfg,
