--- a/trunk/pioneers/po/ChangeLog
+++ b/trunk/pioneers/po/ChangeLog
@@ -1,3 +1,6 @@
+2019-06-30  Jozef Riha <jose1711@gmail.com>
+	* sk.po: New translation
+	
 2017-03-14  Cyril C. <cyrilc81@users.sourceforge.net>
 	* fr.po: Plural forms for dice. Fixes SF bug #296
 	
