--- a/trunk/pioneers/po/ChangeLog
+++ b/trunk/pioneers/po/ChangeLog
@@ -1,4 +1,7 @@
-2019-06-30  Jozef Riha <jose1711@gmail.com>
+2019-07-17  Jose Riha <jose1711@gmail.com>
+	* sk.po: Updated translation
+
+2019-06-30  Jose Riha <jose1711@gmail.com>
 	* sk.po: New translation
 	
 2017-03-14  Cyril C. <cyrilc81@users.sourceforge.net>
