--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,3 +1,7 @@
+2019-07-22  Roland Clobus <rclobus@rclobus.nl>
+	* client/ai/genetic.c: Fix for Coverity CID 241969: out-of-bounds
+	read.
+	
 2019-06-30  Roland Clobus <rclobus@rclobus.nl>
 	* client/gtk/audio.c: Beep was not working correctly.
 
