--- a/trunk/pioneers/ChangeLog
+++ b/trunk/pioneers/ChangeLog
@@ -1,3 +1,6 @@
+2019-10-10  Roland Clobus <rclobus@rclobus.nl>
+	* server/meta.c: The maximum reconnect interval is 24 hours.
+	
 2019-07-22  Roland Clobus <rclobus@rclobus.nl>
 	* client/ai/genetic.c: Fix for Coverity CID 241969: out-of-bounds
 	read.
