--- a/trunk/pioneers/ChangeLog
+++ b/trunk/pioneers/ChangeLog
@@ -1,3 +1,7 @@
+2020-01-02  Roland Clobus <rclobus@rclobus.nl>
+	* ChangeLog, client/gtk/avahi.c, docs/README.states: Apply
+	misspell-fixer.
+
 2019-10-10  Roland Clobus <rclobus@rclobus.nl>
 	* server/meta.c: The maximum reconnect interval is 24 hours.
 	
@@ -2922,7 +2926,7 @@
 
 2005-09-14  0.9.27  Bas Wijnen <shevek@fmf.nl>
 
-	* editor/gtk/editor.c: Warn instead of crash when clearing nonexistant
+	* editor/gtk/editor.c: Warn instead of crash when clearing nonexistent
 	hex.  Set minimum map size to 1, not 2.  Set sensitivity of correct
 	buttons when resize limits are hit.  Let ports disappear correctly.  
 	* client/gtk/gold.c, client/gtk/discard.c: Reindented.
@@ -4227,7 +4231,7 @@
 	* client/common/callback.h, client/common/client.c (client_start),
 	* client/common/gnocatan.c, client/gtk/callbacks.c,
 	* client/gtk/frontend.h, client/gtk/offline.c: Changes to frontend
-	intialisation
+	initialisation
 
 2003-12-21 0.8.1.1  Bas Wijnen <b.wijnen@phys.rug.nl>
 	* client/common/Makefile.am: Generalized file generation for
