--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,3 +1,6 @@
+2020-03-22  Roland Clobus <rclobus@rclobus.nl>
+	* client/gtk/audio.c: Fixed beeping, effectively reverting 2019-06-30.
+
 2020-01-02  Roland Clobus <rclobus@rclobus.nl>
 	* ChangeLog, client/gtk/avahi.c, docs/README.states: Apply
 	misspell-fixer.
