--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -2,6 +2,7 @@
 	* client/gtk/Makefile.am, client/gtk/audio.c, configure.ac: Use
 	libcanberra instead of beep, which allows for sounds when pioneers is
 	not started from a console.
+	* client/gtk/gui.c: Use 16:9 layout as the default.
 
 2020-03-23  Roland Clobus <rclobus@rclobus.nl>
 	* po/POTFILES.in: client/gtk/audio.c contains a translatable text too.
