--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,3 +1,6 @@
+2020-03-26  Roland Clobus <rclobus@rclobus.nl>
+	* configure.ac: Fix for warning in ar.
+
 2020-03-25  Roland Clobus <rclobus@rclobus.nl>
 	* client/gtk/Makefile.am, client/gtk/audio.c, configure.ac: Use
 	libcanberra instead of beep, which allows for sounds when pioneers is
