--- a/pioneers/ChangeLog
+++ b/pioneers/ChangeLog
@@ -1,5 +1,6 @@
 2020-03-26  Roland Clobus <rclobus@rclobus.nl>
 	* configure.ac: Fix for warning in ar.
+	* common/deck.c, client/ai/genetic.c: Fix for -Wold-style-definition.
 
 2020-03-25  Roland Clobus <rclobus@rclobus.nl>
 	* client/gtk/Makefile.am, client/gtk/audio.c, configure.ac: Use
