Update POT file for 15.6 release

--- a/pioneers/po/ChangeLog
+++ b/pioneers/po/ChangeLog
@@ -1,3 +1,6 @@
+2020-06-21  Roland Clobus <rclobus@rclobus.nl>
+	* pioneers.pot: Updated for 15.6
+
 2019-07-17  Jose Riha <jose1711@gmail.com>
 	* sk.po: Updated translation
 
