po: Updated nl to 15.6

--- a/pioneers/po/ChangeLog
+++ b/pioneers/po/ChangeLog
@@ -1,3 +1,6 @@
+2020-06-26  Roland Clobus <rclobus@rclobus.nl>
+	* nl.po: Updated to 15.6
+
 2020-06-21  Roland Clobus <rclobus@rclobus.nl>
 	* pioneers.pot: Updated for 15.6
 
